# backsplash

./: LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
backend/: app.py
backend/templates/: index.html
frontend/: .gitignore  bun.lockb  package-lock.json  package.json
frontend/src/: grid.js  index.js
