[tool.poetry]
name = "backsplash"
version = "0.1.0"
description = "cave drawings for the 21st century"
authors = ["Ian Gelman <ian.gelman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-SocketIO = "^5.3.6"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
